# printosk

./: .gitignore  ACTIVE_COMMUNICATION_GUIDE.md  BUILD_PICO_CODESPACES.sh  CODE_VERIFICATION_AND_BUILD.md  COMMUNICATION_TEST_GUIDE.md  COMPILATION_GUIDE.md  COMPLETION_SUMMARY.md  ESP32_FINAL_FIRMWARE.ino  ESP32_UPLOAD_INSTRUCTIONS.md  FRESH_BUILD_INSTRUCTIONS.md  MANIFEST.md  PICO_COMMUNICATION_TEST_PLAN.md  PICO_PRINTER_INTEGRATION.md  PICO_QUICK_RECOMPILE.md  PRINTER_TROUBLESHOOTING.md  QUICK_START.md  QUICK_TEST_REFERENCE.md  README.md  SYSTEM_TESTING_GUIDE.md  TESTING_WITHOUT_PRINTER.md  compile_pico_firmware.sh  config.h
docs/: API_SPECIFICATION.md  DATABASE_SCHEMA.md  INDEX.md  (+3 more)
firmware/pico/: CMakeLists.txt  README.md
firmware/pico/src/: command_parser.h  config.h  main.c  printer.h  uart.h  usb_printer.h  utils.h
firmware/pico_printer/: CMakeLists.txt  pico_printer.c
firmware/pico_simple/: CMakeLists.txt  CMakeLists_ELF_ONLY.txt  build_firmware.bat  build_firmware.sh  build_windows.bat  elf2uf2.py  elf2uf2_proper.py  main.py  main_minimal.py  main_ultra_simple.py  pico_simple.c  pico_simple_latest.uf2  pico_simple_uart_bridge.c  platformio.ini  test_simple.c  uf2_gen.py
firmware/pico_simple/test_build/: CMakeCache.txt  Makefile  cmake_install.cmake
firmware/pico_simple/test_build/pico-sdk/: Makefile  cmake_install.cmake
firmware/pico_simple/test_build/pico-sdk/docs/: Makefile  cmake_install.cmake
firmware/pico_simple/test_build/pico-sdk/src/: Makefile  cmake_install.cmake
firmware/pico_simple/test_build/pico-sdk/src/common/boot_picobin_headers/: Makefile  cmake_install.cmake
firmware/pico_simple/test_build/pico-sdk/src/common/boot_picoboot_headers/: Makefile  cmake_install.cmake
firmware/pico_simple/test_build/pico-sdk/src/common/boot_uf2_headers/: Makefile  cmake_install.cmake
firmware/pico_simple/test_build/pico-sdk/src/common/hardware_claim/: Makefile  cmake_install.cmake
firmware/pico_simple/test_build/pico-sdk/src/common/pico_base_headers/: Makefile  cmake_install.cmake
firmware/pico_simple/test_build/pico-sdk/src/common/pico_binary_info/: Makefile  cmake_install.cmake
firmware/pico_simple/test_build/pico-sdk/src/common/pico_bit_ops_headers/: Makefile  cmake_install.cmake
firmware/pico_simple/test_build/pico-sdk/src/common/pico_divider_headers/: Makefile  cmake_install.cmake
firmware/pico_simple/test_build/pico-sdk/src/common/pico_stdlib_headers/: Makefile  cmake_install.cmake
firmware/pico_simple/test_build/pico-sdk/src/common/pico_sync/: Makefile  cmake_install.cmake
firmware/pico_simple/test_build/pico-sdk/src/common/pico_time/: Makefile  cmake_install.cmake
firmware/pico_simple/test_build/pico-sdk/src/common/pico_usb_reset_interface_headers/: Makefile  cmake_install.cmake
firmware/pico_simple/test_build/pico-sdk/src/common/pico_util/: Makefile  cmake_install.cmake
firmware/pico_simple/test_build/pico-sdk/src/rp2040/boot_stage2/: Makefile  cmake_install.cmake
firmware/pico_simple/test_build/pico-sdk/src/rp2040/hardware_regs/: Makefile  cmake_install.cmake
firmware/pico_simple/test_build/pico-sdk/tools/: Makefile  cmake_install.cmake
(+207 files in other folders)
